@@ -18,6 +18,7 @@ Post-v21.03.0
     datapath flows with this field used.
   - Introduce a new "allow-stateless" ACL verb to always bypass connection
     tracking. The existing "allow" verb behavior is left intact.
+  - Added support in native DNS to respond to PTR request types.
 
 OVN v21.03.0 - 12 Mar 2021
 -------------------------
